--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 
 :root {
   font-size: 62.5%;
+  --bg-color-app: rgb(222, 222, 222);
+}
+
+body {
+  background-color: var(--bg-color-app);
 }
 
 header {
@@ -14,24 +19,81 @@ header {
   height: 8rem;
 }
 
-.product {
-  max-width: 50rem;
-  height: 10rem;
-  margin:3rem 2px;
+.app {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
 
-  display: flex;
-  align-items: center;
+}
+
+.product {
+  max-width: 90rem;
+  height: 25rem;
+  margin: 1rem ;
+  padding: 2rem 1rem;
+
+ display: grid;
+ justify-items: center;
   gap: 1rem;
 
-  border: 1px solid blue;
+  background-color: white;
+
+  box-shadow: 1px 1px 5px  rgb(48, 48, 48);
+  position: relative;
 }
 
 .product img {
   object-fit: cover;
   height: 8rem;
+  
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description {
-  width: 80%;
+  min-width: 5rem;
   padding: 0 2rem;
 }
+
+.price {
+  font-size: 15px;
+  font-weight: bold;
+
+  color: green;
+}
+
+.line {
+  margin-top: 1rem;
+  border: 1px solid red;
+  width: 80%;
+}
+
+.informations{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+
+  width: 100%;
+
+
+}
+
+.informations a {
+ text-decoration: none;
+ color: black;
+  cursor: pointer;
+}
+
+.informations a:hover {
+  cursor: pointer;
+}
+
+@media(min-width: 768px) {
+
+}
+
