--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@
 :root {
   font-size: 62.5%;
   --bg-color-app: rgb(238, 238, 238);
+  --ff-body: font-family: 'Roboto', sans-serif;
 }
 
 body {
   background-color: var(--bg-color-app);
+  font-family: var(--ff-body);
 }
 
 header {
@@ -23,7 +25,10 @@ header {
   width: 100%;
   height: 100vh;
   display: grid;
+  gap: 0 10rem;
   grid-template-columns: 1fr;
+
+  position: relative;
 
 }
 
@@ -45,7 +50,7 @@ header {
 
 .product img {
   object-fit: cover;
-  height: 8rem;
+  height: clamp(8rem, 10rem, 20rem);
   
 }
 
@@ -53,11 +58,15 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 10rem;
 }
 
 .description {
-  min-width: 5rem;
+  min-width: 10rem;
   padding: 0 2rem;
+
+  font-size: clamp(12px, 13px, 15px);
+  font-weight: 700;
 }
 
 .price {
@@ -65,6 +74,7 @@ header {
   font-weight: bold;
 
   color: green;
+  font-weight: 400;
 }
 
 .line {
@@ -93,9 +103,9 @@ header {
   cursor: pointer;
 }
 
-@media(min-width: 1440px) {
- .app {
-  grid-template-columns: 1fr 1fr;
- }
-}
+
+
+
+
+
 
