--- a/style.css
+++ b/style.css
@@ -16,11 +16,18 @@ body {
 }
 
 header {
-  background-color: black;
+  background-color: white;
+
   width: 100%;
   height: 10rem;
+
   display: flex;
   align-items: center;
+
+
+  box-shadow: 1px 1px 5px  rgb(48, 48, 48);
+
+  margin-bottom: 2rem;
 }
 
 header img {
@@ -33,7 +40,7 @@ header img {
   width: 100%;
   height: 100vh;
   display: grid;
-  gap: 0 10rem;
+  gap: 0 1rem;
   grid-template-columns: 1fr;
 
   position: relative;
