--- a/style.css
+++ b/style.css
@@ -49,13 +49,12 @@ header img {
 
 .product {
   max-width: 90rem;
-  height: 25rem;
+  min-height: 25rem;
   margin: 1rem ;
   padding: 2rem 1rem;
 
- display: grid;
- justify-items: center;
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
 
   background-color: white;
 
@@ -64,65 +63,99 @@ header img {
 
 }
 
-.product img {
+.description {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  min-width: 10rem;
+  padding: 0 2rem;
+  margin-bottom: 4rem;
+
+  font-size: clamp(12px, 13px, 15px);
+  font-weight: 800;
+}
+
+.description img {
   object-fit: cover;
   height: clamp(8rem, 10rem, 20rem);
   
 }
 
-.content {
+.information {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
-}
-
-.description {
-  min-width: 10rem;
-  padding: 0 2rem;
-
-  font-size: clamp(12px, 13px, 15px);
-  font-weight: 700;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .price {
-  font-size: 15px;
+  font-size: 2rem;
   font-weight: bold;
 
   color: green;
-  font-weight: 400;
+  font-weight: 800;
 }
+
+.store {
+  font-weight: 40;
+  font-size: 1.2rem;
+}
+
+
 
 .line {
   margin-top: 1rem;
-  border: 1px solid red;
+  border: 2px solid red;
   background-color: red;
   width: 100%;
 
 }
 
-.information{
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+
+  height: 100%;
+  width: 100%;
+}
+
+.actions{
   display: flex;
   justify-content: flex-end;
 
-  margin-top: 1rem;
   gap: 1rem;
-
-  width: 100%;
-  height: 100%;
-  padding: 0 1rem;
 
 }
 
-.information button {
+.actions button {
  background: transparent;
  border: none;
 }
 
 
-.information button:hover {
+.actions button:hover {
   cursor: pointer;
 }
+
+.user {
+  width: 3rem;
+  height: 3rem;
+
+}
+
+.user img {
+  object-fit: cover;
+
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+
 
 
 
