--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ header {
   height: 10rem;
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
 
+  gap: 30px;
+  padding: 0 3rem;
 
   box-shadow: 1px 1px 5px  rgb(48, 48, 48);
 
@@ -34,6 +37,39 @@ header img {
   object-fit: cover;
   width: clamp(5rem, 7rem, 9rem);
   margin-left: 2rem;
+}
+
+.search {
+  width: clamp(200px, 280px, 300px);
+
+  display: flex;
+  gap: 2rem;
+}
+
+.search input {
+  width: 100%;
+  height: 40px;
+
+  padding: 0 10px;
+  border-radius: 10px;
+
+  border-color: red;
+  color: red;
+}
+
+.search input::placeholder {
+  color: red;
+}
+
+.searchButton{
+  border: none;
+  background: none;
+
+  cursor: pointer;
+}
+
+.fa-magnifying-glass {
+  color: red;
 }
 
 .app {
