--- a/style.css
+++ b/style.css
@@ -157,38 +157,38 @@ footer {
 
   height: 100%;
   width: 100%;
+
+  padding: 0 20px;
 }
 
 .actions{
   display: flex;
   justify-content: flex-end;
+  width: 100%;
+
+
 
   gap: 1rem;
 
 }
 
-.actions button {
- background: transparent;
- border: none;
+
+
+
+.link{
+  display: flex;
+  align-items: center;
+  justify-self: end;
+
+
+  border: none;
+  background: none;
 }
 
 
-.actions button:hover {
-  cursor: pointer;
-}
-
-.user {
-  width: 3rem;
-  height: 3rem;
-
-}
-
-.user img {
-  object-fit: cover;
-
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+.link a {
+  text-decoration: none;
+  color: black;
 }
 
 
