--- a/style.css
+++ b/style.css
@@ -6,32 +6,49 @@
 
 :root {
   font-size: 62.5%;
-  --bg-color-app: rgb(238, 238, 238);
+  --bg-color-app: #eeeeee;
+  --background-header: #ffffff;
   --ff-body: font-family: 'Roboto', sans-serif;
 }
 
 body {
   background-color: var(--bg-color-app);
+ 
   font-family: var(--ff-body);
+
+  display: grid;
+
+  grid-template-rows: 15rem auto auto;
+
+  grid-template-areas: 
+  "header"
+  "banner"
+  "content";
+}
+
+button:hover, a:hover {
+  opacity: 0.8;
 }
 
 header {
-  background-color: white;
+  background-color: var(--background-header);
 
   width: 100%;
-  height: 10rem;
+
+  ma-height: 15rem;
+ 
+ 
 
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 
-  gap: 30px;
   padding: 0 3rem;
 
-  box-shadow: 1px 1px 5px  rgb(48, 48, 48);
-
-  margin-bottom: 2rem;
+  grid-area: header;
 }
+
 
 header img {
   object-fit: cover;
@@ -39,11 +56,57 @@ header img {
   margin-left: 2rem;
 }
 
+header .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 2rem;
+
+  width: 50%;
+
+}
+
+header .bottom {
+  display: flex;
+
+  justify-content: space-around;;
+  width: 50%;
+  color: black;
+}
+
+header .bottom ul {
+  display: flex;
+  flex-wrap: no-wrap;
+  justify-content: center;
+
+  gap: 2rem;
+
+  width: 100%;
+
+  list-style: none;
+}
+
+
+.bottom ul li a {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  text-decoration: none;
+  color: black;
+
+  font-size: 16px
+}
+
 .search {
-  width: clamp(200px, 280px, 300px);
+  width: 100%;
+ margin: 0 auto;
 
   display: flex;
   gap: 2rem;
+
+
 }
 
 .search input {
@@ -72,29 +135,49 @@ header img {
   color: red;
 }
 
+.banner{
+  width: 75%;
+  height: 340px;
+
+  margin: 0 auto;
+
+  background-color: black;
+  color: white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  
+
+  grid-area: banner;
+}
+
 .app {
   width: 100%;
   height: 100vh;
   display: grid;
-  gap: 0 1rem;
+
   grid-template-columns: 1fr;
 
-  position: relative;
+  grid-area: content;
 
+
+
+  margin-top: 6rem;
+  padding: 0 2rem;
 }
 
 .product {
   max-width: 90rem;
   min-height: 25rem;
-  margin: 1rem ;
+  margin: 3px;
   padding: 2rem 1rem;
 
   display: flex;
   flex-direction: column;
 
   background-color: white;
-
-  box-shadow: 1px 1px 5px  rgb(48, 48, 48);
 
 
 }
@@ -182,30 +265,54 @@ footer {
   align-items: center;
   justify-self: end;
 
+  padding: 10px;
 
+  border-radius: 10px;
   border: none;
+ 
+
   background: none;
 }
 
 
+
 .link a {
   text-decoration: none;
-  color: black;
+  color: #e06666;
+}
+
+@media (max-width: 760px) {
+  .banner {
+    display: none;
+  }
+}
+
+
+@media (min-width: 320px) {
+  .search {
+    min-width: 120px;
+  }
 }
 
 
 
-
-
-@media(min-width: 600px){
+@media(min-width: 750px){
   .app {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .search {
+    min-width: 400px;
   }
 }
 
 @media(min-width: 1024px){
   .app{
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  
+  .search {
+    min-width: 600px;
   }
 }
 
